production docker deployment is now possible

--- a/development.ini
+++ b/development.ini
@@ -24,6 +24,12 @@ jinja2.directories = ellishelp:templates
 # wsgi server configuration
 ###
 
+filter-with = proxy-prefix
+
+[filter:proxy-prefix]
+use = egg:PasteDeploy#prefix
+
+
 [server:main]
 use = egg:waitress#main
 listen = 0.0.0.0:8000
